package adapter;

public interface iSend {
    String sendRequest(String requestData);
}
